--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             --gallery-height: 200px; 
         }
 
-        /* Фикс для Safari: растягиваем html на всю высоту */
+        /* Ключевой фикс для Safari: фон на самом верхнем уровне */
         html {
-            height: -webkit-fill-available;
             background-color: var(--bg-color);
+            height: -webkit-fill-available;
+            transition: background 0.4s ease;
         }
 
         body {
@@ -39,17 +40,6 @@
             transition: background 0.4s ease, color 0.4s ease;
             letter-spacing: var(--base-spacing);
             touch-action: none;
-        }
-
-        /* Заполнение пустот снизу в Safari */
-        body::after {
-            content: '';
-            position: fixed;
-            bottom: 0; left: 0; right: 0;
-            height: 100px;
-            background: var(--bg-color);
-            z-index: -1;
-            transition: background 0.4s ease;
         }
 
         * { 
@@ -82,21 +72,19 @@
             z-index: 100; overflow: hidden; opacity: 0; transition: opacity 0.5s, background 0.4s, color 0.4s;
         }
 
-        #marquee-text { 
-            white-space: nowrap; 
+        /* Контейнер для бесконечного текста */
+        .marquee-wrapper {
+            display: flex;
+            width: max-content;
+            will-change: transform;
             position: absolute;
             left: 0;
-            will-change: transform; 
         }
+        .marquee-item { padding-right: 50px; white-space: nowrap; }
 
         .main-wrapper {
-            width: 100%;
-            max-width: 500px;
-            padding: 0 20px;
-            position: relative;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
+            width: 100%; max-width: 500px; padding: 0 20px;
+            position: relative; height: 100%; display: flex; flex-direction: column;
         }
 
         .title-wrapper {
@@ -121,9 +109,7 @@
 
         .content-fade {
             opacity: 0; visibility: hidden; transition: 0.8s;
-            margin-top: 110px; 
-            width: 100%;
-            display: flex; flex-direction: column;
+            margin-top: 110px; width: 100%; display: flex; flex-direction: column;
         }
         .content-fade.visible { opacity: 1; visibility: visible; }
 
@@ -168,8 +154,7 @@
         }
 
         .bottom-bar {
-            position: fixed; 
-            bottom: env(safe-area-inset-bottom, 15px); /* Учет челки/панели Safari */
+            position: fixed; bottom: env(safe-area-inset-bottom, 15px);
             left: 50%; transform: translateX(-50%);
             width: 100%; max-width: 500px; padding: 0 20px 15px 20px;
             display: flex; justify-content: space-between; align-items: flex-end; z-index: 200;
@@ -181,17 +166,7 @@
             font-family: 'Bookish Book', sans-serif; font-size: var(--btn-font-size);
             text-transform: uppercase; transition: 0.4s ease; display: flex; align-items: center; justify-content: center;
         }
-
         .square-btn { width: var(--btn-size); min-width: var(--btn-size); padding: 0 !important; }
-        .square-btn svg { width: 55%; height: 55%; }
-
-        .tooltip-wrapper { position: relative; }
-        .tooltip-content {
-            display: none; position: absolute; bottom: calc(100% + 8px);
-            background: var(--btn-bg); color: var(--btn-text); padding: 10px; font-size: 9px;
-            text-transform: uppercase; white-space: nowrap; border: 1px solid var(--main-color);
-        }
-        .tooltip-wrapper:hover .tooltip-content { display: block; }
     </style>
 </head>
 <body oncontextmenu="return false;">
@@ -199,7 +174,10 @@
     <audio id="bg-music" loop><source src="music.mp3" type="audio/mpeg"></audio>
 
     <div class="top-bar" id="top-bar">
-        <div id="marquee-text">ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT</div>
+        <div class="marquee-wrapper" id="marquee-container">
+            <div class="marquee-item">ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT —</div>
+            <div class="marquee-item">ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT —</div>
+        </div>
     </div>
 
     <div class="main-wrapper">
@@ -236,91 +214,44 @@
                 <input type="text" class="acc-input" placeholder="#FFFFFF" id="bg-input">
             </div>
         </div>
-        <div style="display: flex; flex-direction: column; gap: 4px; margin-top: 5px;">
-            <button class="bottom-btn" style="width: 100%; height: 24px; font-size: 7px;" onclick="location.reload()">[ RESET ]</button>
-            <button class="bottom-btn" id="close-acc" style="width: 100%; height: 24px; font-size: 7px;">[ CLOSE ]</button>
-        </div>
+        <button class="bottom-btn" style="width: 100%; height: 24px; font-size: 7px; margin-top: 8px;" onclick="location.reload()">[ RESET ]</button>
+        <button class="bottom-btn" id="close-acc" style="width: 100%; height: 24px; font-size: 7px; margin-top: 4px;">[ CLOSE ]</button>
     </div>
 
     <div class="bottom-bar">
-        <div class="tooltip-wrapper">
-            <button class="bottom-btn">[ ABOUT ME ]</button>
-            <div class="tooltip-content">19 years / love money / hate fat bitches / 11 w2026</div>
-        </div>
+        <button class="bottom-btn">[ ABOUT ME ]</button>
         <div style="gap: 10px; display: flex; align-items: flex-end;">
-            <button class="bottom-btn square-btn" id="acc-trigger">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"/></svg>
-            </button>
-            <button class="bottom-btn square-btn" id="theme-btn">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
-            </button>
-            <div class="tooltip-wrapper">
-                <button class="bottom-btn" id="mute-btn">[ SOUND: OFF ]</button>
-                <div class="tooltip-content" style="right: 0;">VZk1ll Turbo 2000 - MESTO SMERTI</div>
-            </div>
+            <button class="bottom-btn square-btn" id="acc-trigger">SET</button>
+            <button class="bottom-btn square-btn" id="theme-btn">M/D</button>
+            <button class="bottom-btn" id="mute-btn">[ SOUND: OFF ]</button>
         </div>
     </div>
 
     <script>
         const root = document.documentElement;
         const cursor = document.getElementById('custom-cursor');
-        const marqueeEl = document.getElementById('marquee-text');
+        const marqueeContainer = document.getElementById('marquee-container');
         const gallery = document.getElementById('gallery-anim');
         const audio = document.getElementById('bg-music');
         const bgInput = document.getElementById('bg-input');
 
         let mouseX = 0, mouseY = 0, cursorX = 0, cursorY = 0;
-        let marqueePos = window.innerWidth;
-        let marqueeCurrentSpeed = 2, marqueeTargetSpeed = 2;
+        let marqueePos = 0, marqueeCurrentSpeed = 1.5, marqueeTargetSpeed = 1.5;
         let galPos = 0, galCurrentSpeed = 0, galTargetSpeed = 0;
-        let isMuted = true, animationsStarted = false;
-        let cursorActive = false;
-        let cursorTimeout;
+        let isMuted = true, animationsStarted = false, cursorActive = false, cursorTimeout;
 
-        // Фикс прокрутки
-        bgInput.addEventListener('blur', () => {
-            window.scrollTo(0, 0);
-        });
-
-        document.getElementById('discord-btn').onclick = function() {
-            const originalText = this.innerText;
-            navigator.clipboard.writeText('dnka').then(() => {
-                this.innerText = 'COPIED!';
-                setTimeout(() => { this.innerText = originalText; }, 1000);
-            });
-        };
+        bgInput.addEventListener('blur', () => window.scrollTo(0, 0));
 
         function getContrastYIQ(hexcolor){
             hexcolor = hexcolor.replace("#", "");
             if(hexcolor.length === 3) hexcolor = hexcolor.split('').map(s => s + s).join('');
-            var r = parseInt(hexcolor.substr(0,2),16);
-            var g = parseInt(hexcolor.substr(2,2),16);
-            var b = parseInt(hexcolor.substr(4,2),16);
-            var yiq = ((r*299)+(g*587)+(b*114))/1000;
-            return (yiq >= 128) ? '#000000' : '#ffffff';
-        }
-
-        function changeSize(type, delta) {
-            if (type === 'text') {
-                let current = parseInt(window.getComputedStyle(document.querySelector('.link-text')).fontSize);
-                document.querySelectorAll('.link-text').forEach(el => el.style.fontSize = (current + delta) + 'px');
-            } else if (type === 'btn') {
-                let currentSize = parseInt(root.style.getPropertyValue('--btn-size') || 28);
-                let currentFont = parseFloat(root.style.getPropertyValue('--btn-font-size') || 10);
-                root.style.setProperty('--btn-size', (currentSize + delta) + 'px');
-                root.style.setProperty('--btn-font-size', (currentFont + delta/4) + 'px');
-            } else if (type === 'space') {
-                let current = parseFloat(root.style.getPropertyValue('--base-spacing') || 0.2);
-                root.style.setProperty('--base-spacing', (current + delta) + 'px');
-            } else if (type === 'gal') {
-                let current = parseInt(root.style.getPropertyValue('--gallery-height') || 200);
-                root.style.setProperty('--gallery-height', Math.max(50, current + delta) + 'px');
-            }
+            var r = parseInt(hexcolor.substr(0,2),16), g = parseInt(hexcolor.substr(2,2),16), b = parseInt(hexcolor.substr(4,2),16);
+            return ((r*299)+(g*587)+(b*114))/1000 >= 128 ? '#000000' : '#ffffff';
         }
 
         bgInput.addEventListener('input', (e) => {
             let bgColor = e.target.value.startsWith('#') ? e.target.value : '#' + e.target.value;
-            if (bgColor.length < 4 && bgColor.length !== 7) return;
+            if (bgColor.length !== 4 && bgColor.length !== 7) return;
             root.style.setProperty('--bg-color', bgColor);
             let adaptiveText = getContrastYIQ(bgColor);
             root.style.setProperty('--main-color', adaptiveText);
@@ -338,8 +269,9 @@
             if (animationsStarted) {
                 marqueeCurrentSpeed += (marqueeTargetSpeed - marqueeCurrentSpeed) * 0.08;
                 marqueePos -= marqueeCurrentSpeed;
-                if (marqueePos < -marqueeEl.offsetWidth) { marqueePos = window.innerWidth; }
-                marqueeEl.style.transform = `translateX(${marqueePos}px)`;
+                // Бесшовный ресет: когда первая половина ушла, прыгаем назад
+                if (Math.abs(marqueePos) >= marqueeContainer.offsetWidth / 2) marqueePos = 0;
+                marqueeContainer.style.transform = `translateX(${marqueePos}px)`;
                 
                 galCurrentSpeed += (galTargetSpeed - galCurrentSpeed) * 0.05;
                 galPos -= galCurrentSpeed;
@@ -365,24 +297,6 @@
         window.addEventListener('touchstart', updateCoords);
         window.addEventListener('touchmove', updateCoords);
 
-        document.getElementById('mute-btn').onclick = function() {
-            isMuted = !isMuted;
-            if(!isMuted) { audio.play(); this.innerText = "[ SOUND: ON ]"; galTargetSpeed = 1.2; }
-            else { audio.pause(); this.innerText = "[ SOUND: OFF ]"; galTargetSpeed = 0; }
-        };
-
-        document.getElementById('theme-btn').onclick = () => {
-            let currentBg = getComputedStyle(root).getPropertyValue('--bg-color').trim();
-            let newBg = (currentBg === '#ffffff' || currentBg === 'rgb(255, 255, 255)') ? '#000000' : '#ffffff';
-            root.style.setProperty('--bg-color', newBg);
-            let adaptiveText = getContrastYIQ(newBg);
-            root.style.setProperty('--main-color', adaptiveText);
-            root.style.setProperty('--btn-bg', adaptiveText);
-            root.style.setProperty('--btn-text', newBg);
-            root.style.setProperty('--top-bar-bg', adaptiveText);
-            root.style.setProperty('--top-bar-text', newBg);
-        };
-
         document.getElementById('acc-trigger').onclick = () => document.getElementById('acc-menu').classList.add('active');
         document.getElementById('close-acc').onclick = () => document.getElementById('acc-menu').classList.remove('active');
 
@@ -400,11 +314,15 @@
                             document.getElementById('top-bar').style.opacity = 1;
                             animationsStarted = true;
                         }, 1000);
-                    }, 1500);
+                    }, 1000);
                 }
-            }, 120);
+            }, 100);
             loop();
         };
+        
+        // Пауза строки при клике на топ-бар
+        document.getElementById('top-bar').addEventListener('touchstart', () => marqueeTargetSpeed = 0);
+        document.getElementById('top-bar').addEventListener('touchend', () => marqueeTargetSpeed = 1.5);
     </script>
 </body>
 </html>
