--- a/index.html
+++ b/index.html
@@ -53,11 +53,18 @@
         }
 
         #custom-cursor {
-            width: 6px; height: 6px; border-radius: 50%;
-            position: fixed; top: 0; left: 0;
-            pointer-events: none; z-index: 999999;
+            width: 6px; 
+            height: 6px; 
+            border-radius: 50%;
+            position: fixed; 
+            top: 0; 
+            left: 0;
+            pointer-events: none; 
+            z-index: 999999;
+            /* Белый цвет + difference = черный на белом фоне, белый на черном тексте */
+            background: #ffffff !important; 
             mix-blend-mode: difference;
-            background: #fff; opacity: 0;
+            opacity: 0;
             transition: opacity 0.5s ease;
             will-change: transform, opacity;
         }
@@ -145,7 +152,7 @@
         .acc-input {
             background: transparent; border: 1px solid var(--main-color);
             color: var(--main-color); font-size: 8px; padding: 3px; width: 100%; text-transform: uppercase;
-            -webkit-user-select: text; user-select: text; /* Разрешаем ввод текста */
+            -webkit-user-select: text; user-select: text;
         }
 
         .bottom-bar {
@@ -255,7 +262,6 @@
         let cursorActive = false;
         let cursorTimeout;
 
-        // Фикс мобильного вьюпорта после ввода цвета
         bgInput.addEventListener('blur', () => {
             window.scrollTo(0, 0);
             document.body.scrollTop = 0;
@@ -332,7 +338,6 @@
             requestAnimationFrame(loop);
         }
 
-        // Поддержка и мыши, и тача для курсора
         const updateCoords = (e) => {
             let x = e.clientX || (e.touches && e.touches[0].clientX);
             let y = e.clientY || (e.touches && e.touches[0].clientY);
