--- a/index.html
+++ b/index.html
@@ -19,20 +19,12 @@
             --gallery-height: 200px; 
         }
 
-        html, body {
-            overflow: hidden;
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            touch-action: none; 
-        }
-
         * { 
             cursor: none !important; 
             box-sizing: border-box; 
             -webkit-user-select: none; 
             user-select: none; 
-            -webkit-touch-callout: none;
+            touch-action: none; 
         }
 
         @font-face {
@@ -45,8 +37,8 @@
             font-family: 'Bookish Book', Helvetica, Arial, sans-serif;
             background-color: var(--bg-color);
             color: var(--main-color);
-            margin: 0; padding: 0;
-            display: flex; flex-direction: column; align-items: center;
+            margin: 0; height: 100vh; width: 100vw;
+            overflow: hidden; display: flex; flex-direction: column; align-items: center;
             transition: background 0.4s ease, color 0.4s ease;
             letter-spacing: var(--base-spacing);
         }
@@ -57,8 +49,7 @@
             pointer-events: none; z-index: 999999;
             mix-blend-mode: difference;
             background: #fff; opacity: 0;
-            transition: opacity 0.5s ease;
-            will-change: transform, opacity;
+            transition: opacity 0.2s ease;
         }
 
         .top-bar {
@@ -67,26 +58,21 @@
             z-index: 100; overflow: hidden; opacity: 0; transition: opacity 0.5s, background 0.4s, color 0.4s;
         }
 
-        #marquee-text { 
-            white-space: nowrap; 
-            position: absolute;
-            left: 0;
-            will-change: transform; 
-        }
+        #marquee-text { white-space: nowrap; will-change: transform; }
 
+        /* Контейнер для выравнивания заголовка и контента в одну линию */
         .main-wrapper {
             width: 100%;
             max-width: 500px;
             padding: 0 20px;
             position: relative;
-            height: 100vh;
             display: flex;
             flex-direction: column;
         }
 
         .title-wrapper {
             display: flex; flex-direction: column; position: absolute; 
-            left: 20px; top: 50%; transform: translateY(-50%); 
+            left: 20px; top: 50vh; transform: translateY(-50%); 
             transition: 1s cubic-bezier(0.65, 0, 0.35, 1); z-index: 90;
         }
 
@@ -106,8 +92,7 @@
 
         .content-fade {
             opacity: 0; visibility: hidden; transition: 0.8s;
-            margin-top: 110px; 
-            width: 100%;
+            margin-top: 75px; width: 100%;
             display: flex; flex-direction: column;
         }
         .content-fade.visible { opacity: 1; visibility: visible; }
@@ -120,7 +105,7 @@
 
         .gallery-container { 
             position: relative; width: 100%; height: var(--gallery-height); 
-            margin-top: 35px; overflow: hidden; transition: height 0.3s ease;
+            margin-top: 20px; overflow: hidden; transition: height 0.3s ease;
         }
         .gallery { display: flex; width: max-content; height: 100%; will-change: transform; }
         .gallery img { 
@@ -149,7 +134,6 @@
         .acc-input {
             background: transparent; border: 1px solid var(--main-color);
             color: var(--main-color); font-size: 8px; padding: 3px; width: 100%; text-transform: uppercase;
-            -webkit-user-select: text; user-select: text;
         }
 
         .bottom-bar {
@@ -250,25 +234,20 @@
         const marqueeEl = document.getElementById('marquee-text');
         const gallery = document.getElementById('gallery-anim');
         const audio = document.getElementById('bg-music');
-        const bgInput = document.getElementById('bg-input');
 
         let mouseX = 0, mouseY = 0, cursorX = 0, cursorY = 0;
-        let marqueePos = window.innerWidth; 
-        let marqueeCurrentSpeed = 2, marqueeTargetSpeed = 2;
+        let marqueePos = 0, marqueeCurrentSpeed = 2, marqueeTargetSpeed = 2;
         let galPos = 0, galCurrentSpeed = 0, galTargetSpeed = 0;
         let isMuted = true, animationsStarted = false;
-        let cursorActive = false;
-        let cursorTimeout;
 
-        bgInput.addEventListener('blur', () => {
-            window.scrollTo(0, 0);
-        });
-
+        // Discord Copy Logic
         document.getElementById('discord-btn').onclick = function() {
             const originalText = this.innerText;
             navigator.clipboard.writeText('dnka').then(() => {
                 this.innerText = 'COPIED!';
-                setTimeout(() => { this.innerText = originalText; }, 1000);
+                setTimeout(() => {
+                    this.innerText = originalText;
+                }, 1000);
             });
         };
 
@@ -304,7 +283,7 @@
             }
         }
 
-        bgInput.addEventListener('input', (e) => {
+        document.getElementById('bg-input').addEventListener('input', (e) => {
             let bgColor = e.target.value.startsWith('#') ? e.target.value : '#' + e.target.value;
             if (bgColor.length < 4 && bgColor.length !== 7) return;
             root.style.setProperty('--bg-color', bgColor);
@@ -317,18 +296,14 @@
         });
 
         function loop() {
-            cursorX += (mouseX - cursorX) * 0.15;
-            cursorY += (mouseY - cursorY) * 0.15;
+            cursorX += (mouseX - cursorX) * 0.2;
+            cursorY += (mouseY - cursorY) * 0.2;
             cursor.style.transform = `translate3d(${cursorX}px, ${cursorY}px, 0) translate(-50%, -50%)`;
-            
             if (animationsStarted) {
                 marqueeCurrentSpeed += (marqueeTargetSpeed - marqueeCurrentSpeed) * 0.08;
                 marqueePos -= marqueeCurrentSpeed;
-                if (marqueePos < -marqueeEl.offsetWidth) {
-                    marqueePos = window.innerWidth;
-                }
+                if (marqueePos < -marqueeEl.offsetWidth) marqueePos = window.innerWidth;
                 marqueeEl.style.transform = `translateX(${marqueePos}px)`;
-                
                 galCurrentSpeed += (galTargetSpeed - galCurrentSpeed) * 0.05;
                 galPos -= galCurrentSpeed;
                 if (Math.abs(galPos) >= gallery.offsetWidth / 2) galPos = 0;
@@ -337,21 +312,10 @@
             requestAnimationFrame(loop);
         }
 
-        const updateCoords = (e) => {
-            let x = e.clientX || (e.touches && e.touches[0].clientX);
-            let y = e.clientY || (e.touches && e.touches[0].clientY);
-            if (x !== undefined) {
-                if (!cursorActive) { cursorX = x; cursorY = y; cursorActive = true; }
-                mouseX = x; mouseY = y;
-                cursor.style.opacity = 1; 
-                clearTimeout(cursorTimeout);
-                cursorTimeout = setTimeout(() => { cursor.style.opacity = 0; }, 1000);
-            }
-        };
-
-        window.addEventListener('mousemove', updateCoords);
-        window.addEventListener('touchstart', updateCoords);
-        window.addEventListener('touchmove', updateCoords);
+        window.addEventListener('mousemove', e => { 
+            mouseX = e.clientX; mouseY = e.clientY; 
+            cursor.style.opacity = 1; 
+        });
 
         document.getElementById('mute-btn').onclick = function() {
             isMuted = !isMuted;
